tests/transpiler/x/py/left_join_multi.py
# Code generated by Mochi v0.10.34 - DO NOT EDIT
from dataclasses import dataclass
from typing import List, Dict

@dataclass
class Customer:
    id: int
    name: str

customers = [Customer(1, "Alice"), Customer(2, "Bob")]
@dataclass
class Order:
    id: int
    customerId: int

orders = [Order(100, 1), Order(101, 2)]
@dataclass
class Item:
    orderId: int
    sku: str

items = [Item(100, "a")]
@dataclass
class Result:
    orderId: int
    name: any
    item: any

result = [Result(o.id, c["name"], i) for o in orders for c in customers for i in [i for i in items if o.id == i["orderId"]] or [None] if o.customerId == c["id"]]
print("--- Left Join Multi ---")
for r in result:
    print(" ".join(str(x) for x in [r["orderId"], r["name"], r["item"]]).rstrip())
